show source code in bigModal for ethereum icon tile onClick

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -20,37 +20,21 @@
       </p>
     </div>
 
+    <div id="bigModal" class="hidden">
+      <span id="bigModalClose" class="closeX">X</span>
+      <div id="bigModalContent">
+      </div>
+    </div>
+
     <div id="howTile">
       <img id="howImg" src="images/question.png">
       <p>How does this work?</p>
-    </div>
-    <div id="howModal" class="hidden">
-      <span id="howClose" class="closeX">X</span>
-      <p>
-	Welcome to the Simple MultiSig Wallet!
-      </p>
-      <p>
-	The user interface is hosted via IPFS (the InterPlanetary File System).
-      </p>
-      <p>
-	The source code is published on <a href="https://github.com/AlejandroDiaz666/simple-multisig" target="_blank">GitHub</a>
-      </p>
-      <p>
-	<h2>Thanks for using the Simple MultiSig Wallet!</h2>
-      </p>
     </div>
 
     <div id="ethereumTile">
       <img id="ethereumLogo" src="images/ethereum-trans.png"/>
       <p>Source Code</p>
     </div>
-    <div id="creditsModal" class="hidden">
-      <span id="creditsClose" class="closeX">X</span>
-      <p>
-	Credits go here
-      </p>
-    </div>
-
 
     <div id="topSection">
       <span id="mainTitleSpan">
